[package]
name = "rusty-invaders"
version = "0.1.0"
authors = ["Thomaz Moura <padilha.thomaz@gmail.com>", "Nathan Stocks <cleancut@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
rusty_audio = "1.1.4"
